# file-manager

./: LICENSE  README.md  pyproject.toml
file_manager/: __init__.py  cli.py  gui.py  settings.json  tools.py  utils.py
file_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
file_manager_maximterest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
